Init project, import csv file, export csv file and create api to list translations

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "conduit-node",
   "version": "1.0.0",
   "description": "conduit on node",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "mongo:start": "docker run --name realworld-mongo -p 27017:27017 mongo & sleep 5",
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js",
+    "start": "node --max-old-space-size=16384 ./index.js",
+    "dev": "nodemon --max-old-space-size=16384 ./index.js", 
     "test": "newman run ./tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
     "stop": "lsof -ti :3000 | xargs kill",
     "mongo:stop": "docker stop realworld-mongo && docker rm realworld-mongo"
@@ -24,10 +24,11 @@
     "express": "4.13.4",
     "express-jwt": "3.3.0",
     "express-session": "1.13.0",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "7.1.9",
     "method-override": "2.3.5",
     "methods": "1.1.2",
-    "mongoose": "4.4.10",
+    "mongoose": "^6.6.2",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "1.7.0",
     "passport": "0.3.2",
